# harness-runtime

./: .aidigestignore  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  __init__.py  agent.py  cli.py  langgraph.json  pyproject.toml  start_langraph.sh  test_resume.py
.agents/skills/deepagents/: SKILLS.md
.agents/skills/harness-local-testing/: SKILL.md
.agents/skills/langraph/: SKILLS.md
.github/workflows/: publish.yml
api/: __init__.py  dependencies.py  main.py  publisher.py  registry.py
api/routers/: __init__.py  cloudevents.py  deepagents.py  health.py  metrics.py  sessions.py
ci/: config.yaml  release.yaml
core/: __init__.py  acrylic_topology.py  ask_user.py  ask_user_middleware.py  ask_user_types.py  builder.py  custom_graph_builder.py  embedded_tool_loader.py  event_publisher.py  execution_state.py  executor.py  executor_helpers.py  factory.py  interfaces.py  mcp_loader.py  message_writer.py  model_factory.py  model_identifier.py  node_compiler.py  review_content.py  rubric_middleware.py  services.py  session.py  skill_router.py  star_topology.py  start_topology.py  state_schema_builder.py  structured_output.py  subagent_builder.py  tool_loader.py  tool_registry.py  types.py
core/backends/: __init__.py  artifact.py
core/handlers/: __init__.py  lifecycle_handler.py  root_message_handler.py  root_tools_handler.py  root_values_handler.py  subagent_lifecycle_handler.py  subagent_message_handler.py  subagent_tools_handler.py  subagent_values_handler.py
core/integration/: git_backend.py  github_auth.py
core/middleware/: github_middleware.py  human_interaction.py  rubric_middleware.py  shell_middleware.py  structured_output.py
core/publishers/: __init__.py  interfaces.py
core/session/: backends.py  config.py  execution.py  session.py  skills.py
core/tool_handlers/: __init__.py
core/topology/: acrylic_topology.py  star_topology.py  subagent_builder.py
docs/adr/: 001-testing-convention-business-first.md  002-test-plan-convention.md  003-event-streaming-protocol.md  003-harness-runtime-architecture.md  004-stdio-ndjson-frame-protocol.md  005-tool-loading-and-mcp-integration.md  006-session-persistence-and-checkpointing.md  008-structured-output.md  009-per-node-message-isolation-acrylic.md  010-builtin-tool-architecture.md  011-topology-builder-split.md  012-middleware-stack-composition.md  013-hitl-interrupt-protocol.md  014-orchestrator-gitref-and-backend.md  adr-template.md
harness_runtime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
migrations/: 001_create_checkpointer_tables.down.sql  001_create_checkpointer_tables.up.sql  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  verify_migration.sh
models/: __init__.py  events.py  frames.py
observability/: __init__.py  metrics.py
scripts/: README.md  TIER3_SCRIPTS.md  populate-secrets.sh  test-setup.sh  typecheck.sh
scripts/ci/: build.sh  in-cluster-test.sh  run-migrations.sh  run.sh
scripts/patches/: 00-apply-all-patches.sh  02-downsize-dragonfly.sh  03-downsize-application.sh  04-remove-nats-security-context.sh
services/: __init__.py  cloudevents.py  nats_consumer.py  redis.py
tests/: __init__.py  conftest.py  db_setup.sql  docker-compose.yml  fake_server.py  run_db_tests.sh  test_db_checkpoint.py  test_model_thinking.py  test_model_thinking.py.bak
tests/integration/: __init__.py  conftest.py  in_cluster_conftest.py  test_agent_generation_workflow.py  test_nats_events_integration.py
tests/integration/docs/: events_schema.md  schema.md  test_command.md
tests/integration_tests/: conftest.py  helpers.py
tests/integration_tests/ask-user/: test-plan.md  test_ask_user.py
tests/integration_tests/checkpointer/: test-plan.md  test_checkpointer.py  test_db_checkpoint.py
tests/integration_tests/edge-cases/: test-plan.md
tests/integration_tests/frame-protocol/: test-plan.md  test_protocol.py
tests/integration_tests/mcp/: test-plan.md
tests/integration_tests/resume-after-interrrupt/: test-plan.md
tests/integration_tests/skills/: test_skills_git_clone.py  test_skills_subagent.py
tests/integration_tests/sse/: test-plan.md  test_sse_pipeline.py
tests/utils/: README.md  __init__.py  log_capture.py  mock_workflow.py  test_config.py  test_helpers.py  test_helpers_verification.py  test_validation_helper.py
workflows/: main-pipeline.yml  main.yml
