[project]
name = "deepagents_runtime"
version = "0.1.0"
description = "Serverless LangGraph Agent Execution Service"
authors = [
    {name = "Bizmatters Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "nats-py>=2.9.0",
    "deepagents>=0.2.7",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=1.0.0",
    "langsmith>=0.2.0",
    "psycopg[binary,pool]>=3.2.0",
    "redis>=5.2.0",
    "cloudevents>=1.11.0,<2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.2",
    "opentelemetry-sdk>=1.28.2",
    "opentelemetry-instrumentation-fastapi>=0.49b2",
    "opentelemetry-exporter-otlp>=1.28.2",
    "httpx>=0.27.2",
    "prometheus-client>=0.19.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "black>=24.1.1",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
    "langgraph-cli[inmem]>=0.4.4",
    "jsonschema>=4.23.0",
    "websocket-client>=1.8.0",
]

[project.scripts]
deepagents-runtime = "api.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "core", "models", "observability", "services", "migrations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--timeout=300"  # 5 minutes for integration tests with real LLM calls
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
