[project]
name = "harness-runtime"
version = "0.1.11"
description = "LangGraph Agent Execution Engine — HTTP server mode"
authors = [
    {name = "Bizmatters Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.8",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=1.0.0",
    "langsmith>=0.2.0",
    "psycopg[binary,pool]>=3.2.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "redis[hiredis]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "black>=24.1.1",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "ty>=0.0.46",
]

[project.scripts]
harness-runtime = "cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "models", "api"]
py-modules = ["cli"]

[tool.setuptools.package-data]
core = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_file = "log/pytest-run.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--timeout=300",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["core"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ALL"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = "tests/"
